# Kairos-Dungeon

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  ollama-entrypoint.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/engine/: __init__.py  combat.py  game_engine.py
backend/app/engine/abilities/: __init__.py
backend/app/engine/ai/: __init__.py
backend/app/game/: __init__.py  rng.py
backend/app/game/dungeon/: __init__.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  combat.py  creatures.py  dungeon.py  enums.py  game_state.py  loot.py
backend/app/routers/: boss.py  dungeon.py  hero.py  loot.py  session.py  summon.py  websocket.py
backend/app/schemas/: __init__.py  requests.py  ws_messages.py
backend/app/services/: ai_service.py  boss_service.py  greed_penalty.py  loot_service.py  mana_service.py  stt_service.py
backend/tests/: conftest.py
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vitest.config.ts
frontend/public/assets/: ASSET-REPORT.md  LICENSES.md
frontend/public/assets/effects/: effects_atlas.json
frontend/public/assets/hero/: hero_atlas.json
frontend/public/assets/tiles/: tiles_atlas.json
frontend/public/assets/ui/: ui_atlas.json
frontend/public/data/: room_templates.json
frontend/src/components/: App.tsx
frontend/src/types/: game.ts
(+6 files in other folders)
